# trevorkavanaugh.com

./: .gitignore  CLAUDE.md  PROJECT_PLAN.md  README.md  REQUIREMENTS.md  SPEC_ANALYTICS_SITE_SEPARATION.md  STATUS.md  index.md
.github/workflows/: deploy.yml
api/: .gitignore  README.md  dashboard.js  deploy.sh  index.js  jobs.js  package.json
api/migrations/: 001_add_site_domain.sql  002_scrub_pra_data.sql
archive/session_summaries/: BIO_STANDARDIZATION_SUMMARY.md  HANDOFF_2025-12-21.md
assets/brand/: LOGO_BRANDING_GUIDELINES.md
automations/: ROADMAP.md
automations/linkedin-publisher/: .gitignore  pyproject.toml
automations/linkedin-publisher/linkedin_publisher/: __init__.py  api.py  article_generator.py  auth.py  cli.py  config.py  errors.py  formatter.py  git_ops.py  html_builder.py  newsletter.py  pipeline.py  site_updater.py  templates.py
automations/linkedin-publisher/tests/: test_config.py  test_formatter.py
content/: README.md  collective_fragility_paradox_full.md
content/newsletters/: 2026-01-01-software-supply-chain-composition.md  2026-01-08-software-supply-chain-delivery.md  2026-01-13-the-persistent-channel.md  2026-01-15-vendor-update-deployment-practices.md  2026-01-20-deployment-diagnostic-questions.md  2026-01-22-adversary-spectrum-threat-actors.md  (+18 more)
docs/: API_REFERENCE.md  PUBLISHING_QUICKREF.md  QUALITY_CHECKLIST.md  linkedin-poster-project-brief.md  search-advertising-guide.md
frontend/: README.md  about.html  index.html  insights.html  privacy.html  services.html
src/: CNAME  about.html  index.html  insights.html  privacy.html
(+189 files in other folders)
