[project]
name = "linkedin-publisher"
version = "0.1.0"
description = "CLI tool for publishing LinkedIn posts"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "cryptography>=41.0",
]

[project.scripts]
linkedin = "linkedin_publisher.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
